# dao-odra

./: .gitignore  Cargo.toml  Odra.toml  TODO.md  justfile
.github/workflows/: ci-casper-rust-contract.yml
bid_escrow/: Cargo.toml
configuration/: Cargo.toml
configuration/src/: builder.rs  configuration.rs  dao_configuration.rs  lib.rs  voting_configuration.rs
core_contracts/: Cargo.toml
core_contracts/src/: dao_nft.rs  kyc_ntf.rs  lib.rs  refs.rs  reputation_contract.rs  va_nft.rs  va_nft_contract.rs  variable_repository.rs
core_contracts/src/reputation/: agg.rs  balances.rs  mod.rs  stakes.rs  token.rs
core_contracts/tests/common/: mod.rs
core_contracts/tests/steps/: mod.rs
cucumber-runner/: Cargo.toml
cucumber-runner/src/: events.rs  executor.rs  lib.rs
dao/: Cargo.toml
dao/src/: lib.rs
dao/src/bid_escrow/: bid.rs  bid_engine.rs  contract.rs  events.rs  job.rs  job_engine.rs  job_offer.rs  mod.rs  storage.rs
dao/src/configuration/: builder.rs  configuration.rs  dao_configuration.rs  mod.rs  voting_configuration.rs
dao/src/core_contracts/: dao_nft.rs  kyc_ntf.rs  mod.rs  refs.rs  va_nft.rs  variable_repository.rs
dao/src/core_contracts/reputation/: agg.rs  balances.rs  mod.rs  stakes.rs  token.rs
dao/src/modules/: access_control.rs  kyc_info.rs  mod.rs  onboarding_info.rs  owner.rs  refs.rs  repository.rs  whitelist.rs
dao/src/onboarding/: request.rs  voting.rs
dao/src/rules/: mod.rs
dao/src/rules/validation/: mod.rs
dao/src/rules/validation/bid_escrow/: can_be_onboarded.rs  can_bid_be_cancelled.rs  can_bid_on_auction_state.rs  can_bid_on_own_job.rs  can_job_offer_be_cancelled.rs  can_pick_bid.rs  can_progress_job_offer.rs  does_proposed_payment_exceed_budget.rs  does_proposed_payment_match_transferred.rs  exists_ongoing_voting.rs  has_permissions_to_cancel_bid.rs  has_permissions_to_cancel_job_offer.rs  is_dos_fee_enough.rs  is_grace_period.rs  is_not_va.rs  is_stake_non_zero.rs
dao/src/rules/validation/voting/: after_formal_voting.rs  can_create_voting.rs  vote_in_time.rs  voting_not_completed.rs
dao/src/utils/: consts.rs  errors.rs  math.rs  mod.rs  transfer.rs
dao/src/utils_contracts/: ids.rs  rate_provider.rs
dao/src/voting/: ballot.rs  cspr_redistribution.rs  ids.rs  mod.rs  voting_engine.rs
dao/src/voting/voting_engine/: events.rs  voting_state_machine.rs
dao/src/voting_contracts/: admin.rs  kyc_voter.rs  mod.rs  onboarding_request.rs  repo_voter.rs  reputation_voter.rs  simple_voter.rs  slashing_voter.rs
dao/tests/: test_bid_escrow.rs  test_ownership.rs  test_reputation.rs  test_slashing.rs  test_voting.rs
dao/tests/common/: config.rs  dao_world.rs  helpers.rs  mod.rs
dao/tests/common/contracts/: account.rs  bid_escrow.rs  cspr.rs  kyc.rs  mod.rs  ownership.rs  rate_provider.rs  reputation.rs  tokens.rs  va.rs  voting.rs
dao/tests/common/contracts/voting/: builder.rs
dao/tests/common/params/: common.rs  events.rs  mod.rs  voting.rs
dao/tests/features/bid_escrow/: slash_active_job_offers.feature
dao/tests/features/ownership/: ownership.feature
dao/tests/features/slashing/: slashing_bid_escrow.feature  voters_can_slash.feature
dao/tests/features/variables/: va_bid_acceptance_timeout.feature
dao/tests/features/voting/: tokens_redistribution.feature
dao/tests/features/voting/admin/: admin_actions.feature
dao/tests/features/voting/repo/: repo_voter_actions.feature
dao/tests/steps/: balances.rs  bid_escrow.rs  common.rs  kyc.rs  mod.rs  ownership.rs  setup.rs  va.rs  variables.rs  voting.rs
dao_contracts/: Cargo.toml
dao_contracts/src/: lib.rs  variable_repository.rs
dao_contracts/tests/: test_flipper.rs
dao_contracts/tests/common/: mod.rs
dao_contracts/tests/features/flipper/: flipper.feature
dao_contracts/tests/steps/: flipper.rs  mod.rs
dao_modules/: Cargo.toml
dao_modules/src/: access_control.rs  lib.rs  owner.rs  repository.rs  whitelist.rs
dao_utils/: Cargo.toml
dao_utils/src/: errors.rs  lib.rs
docs/: search-index.js  source-files.js
docs/dao/: all.html  index.html
docs/dao/configuration/: index.html  sidebar-items.js  struct.Configuration.html  struct.ConfigurationBuilder.html  struct.DaoConfiguration.html  struct.VotingConfiguration.html
docs/dao/core_contracts/: index.html  sidebar-items.js  struct.Burn.html  struct.DaoNft.html  struct.DaoNftComposer.html  struct.DaoNftDeployer.html  struct.DaoNftRef.html  struct.KycNftContract.html  struct.KycNftContractComposer.html  struct.KycNftContractDeployer.html  struct.KycNftContractRef.html  struct.Mint.html  struct.ReputationContract.html  struct.ReputationContractComposer.html  struct.ReputationContractDeployer.html  struct.ReputationContractRef.html  struct.Stake.html  struct.Unstake.html  struct.VaNftContract.html  struct.VaNftContractComposer.html  struct.VaNftContractDeployer.html  struct.VaNftContractRef.html  struct.VariableRepositoryContract.html  struct.VariableRepositoryContractComposer.html  struct.VariableRepositoryContractDeployer.html  struct.VariableRepositoryContractRef.html  type.TokenId.html  type.TokenUri.html
docs/dao/onboarding/: index.html  (+3 more)
macros/: Cargo.toml
modules/: Cargo.toml
modules/src/: owner.rs  repository.rs  whitelist.rs
resources/: admin_contract_schema.json  admin_schema.json  bid_escrow_contract_schema.json  kyc_voter_contract_schema.json  onboarding_request_contract_schema.json  onboarding_request_schema.json  repo_voter_contract_schema.json  reputation_contract_schema.json  reputation_voter_contract_schema.json  simple_voter_contract_schema.json  slashing_voter_contract_schema.json  va_nft_contract_schema.json  variable_repository_contract_schema.json  variable_repository_schema.json
utils/: Cargo.toml
utils-contracts/: Cargo.toml
utils-contracts/src/: ids.rs  rate_provider.rs
utils/src/: contract_call.rs  lib.rs  math.rs
voting/: Cargo.toml
voting/src/: ballot.rs  lib.rs  refs.rs  voting_configuration.rs  voting_engine.rs
voting/src/voting_engine/: voting_state_machine.rs
voting_contracts/: Cargo.toml
voting_contracts/src/: admin.rs  lib.rs
(+244 files in other folders)
