[workspace]
members = [
    "bid_escrow",
    "core_contracts",
    "configuration",
    "modules",
    "utils",
    "utils-contracts",
    "voting",
    "voting_contracts",
]

[workspace.dependencies]
odra = { path = "../odra/odra/core", default-features = false }
odra-modules = { path = "../odra/odra/modules", default-features = false }

