[package]
name = "bid_escrow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
odra = { workspace = true }
modules = { path = "../modules", default-features = false }
utils = { path = "../utils", default-features = false }

[dev-dependencies]
cucumber = "0.19.1"
futures = "0.3.5"

[features]
default = ["mock-vm"]
mock-vm = ["odra/mock-vm", "modules/mock-vm", "utils/mock-vm"]
casper = ["odra/casper", "modules/casper", "utils/casper"]
