[package]
name = "configuration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_contracts = { path = "../core_contracts", default-features = false }
utils = { path = "../utils", default-features = false }
odra = { workspace = true }

[features]
default = ["mock-vm"]
mock-vm = ["core_contracts/mock-vm", "utils/mock-vm", "odra/mock-vm"]
casper = ["core_contracts/casper", "utils/casper", "odra/casper"]