[package]
name = "configuration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils", default-features = false }
odra = { workspace = true }

[features]
default = ["mock-vm"]
mock-vm = ["utils/mock-vm", "odra/mock-vm"]
casper =  ["utils/casper", "odra/casper"]