[package]
name = "core_contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { path = "../../odra/core", default-features = false }
modules = { path = "../modules", default-features = false }
utils = { path = "../utils", default-features = false }

[dev-dependencies]
cucumber = "0.19.1"
futures = "0.3.5"

[features]
default = ["mock-vm"]
mock-vm = ["odra/mock-vm", "modules/mock-vm", "utils/mock-vm"]
casper = ["odra/casper", "modules/casper", "utils/casper"]

[[test]]
name = "test_flipper"
harness = false  # allows Cucumber to print output instead of libtest