[package]
name = "dao"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
odra = { workspace = true }
odra-modules = { workspace = true }
macros = { path = "../macros" }

[dev-dependencies]
cucumber = "0.19.1"
futures = "0.3.5"

[features]
default = ["mock-vm"]
mock-vm = ["odra/mock-vm", "odra-modules/mock-vm"]
casper = ["odra/casper", "odra-modules/casper"]

[[test]]
name = "test_flipper"
harness = false  # allows Cucumber to print output instead of libtest