[package]
name = "dao"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { workspace = true }
odra-modules = { workspace = true }
macros = { path = "../macros" }

[dev-dependencies]
cucumber = "0.19.1"
futures = "0.3.5"
derive_more = "0.99.11"

[features]
default = ["mock-vm"]
mock-vm = ["odra/mock-vm", "odra-modules/mock-vm", "macros/mock-vm"]
casper = ["odra/casper", "odra-modules/casper", "macros/casper"]

[[test]]
name = "test_ownership"
harness = false  # allows Cucumber to print output instead of libtest

[[test]]
name = "test_kyc"
harness = false  # allows Cucumber to print output instead of libtest

[[test]]
name = "test_va"
harness = false  # allows Cucumber to print output instead of libtest

[[test]]
name = "test_rate_provider"
harness = false  # allows Cucumber to print output instead of libtest
