[package]
name = "dao_contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { git = "https://github.com/odradev/odra.git", branch = "feature/derive-odra-type", default-features = false }
dao_modules = { path = "../dao_modules", default-features = false }
dao_utils = { path = "../dao_utils", default-features = false }

[dev-dependencies]
cucumber = "0.19.1"
futures = "0.3.5"

[features]
default = ["mock-vm"]
mock-vm = ["odra/mock-vm", "dao_modules/mock-vm", "dao_utils/mock-vm"]
casper = ["odra/casper", "dao_modules/casper", "dao_utils/casper"]

[[test]]
name = "test_flipper"
harness = false  # allows Cucumber to print output instead of libtest