[package]
name = "dao_modules"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
odra = { path = "../../odra/core", default-features = false }
dao_utils = { path = "../dao_utils", default-features = false }

[features]
default = ["mock-vm"]
mock-vm = ["odra/mock-vm", "dao_utils/mock-vm"]
casper = ["odra/casper", "dao_utils/casper"]
