[package]
name = "macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.33"
quote = "1.0.15"
syn =  { version = "1.0.86", features = ["full", "extra-traits"] }
convert_case = "0.5.0"
pretty_assertions = "1.2.0"

[lib]
proc-macro = true