[package]
name = "modules"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { workspace = true, default-features = false }
utils = { path = "../utils", default-features = false }

[features]
default = ["mock-vm"]
mock-vm = ["odra/mock-vm", "utils/mock-vm"]
casper = ["odra/casper", "utils/casper"]
