[package]
name = "voting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
odra = { path = "../../odra/core", default-features = false }
utils = { path = "../utils", default-features = false }
core_contracts = { path = "../core_contracts", default-features = false }
configuration = { path = "../configuration", default-features = false }

[features]
default = ["mock-vm"]
mock-vm = ["odra/mock-vm", "utils/mock-vm", "core_contracts/mock-vm", "configuration/mock-vm"]
casper = ["odra/casper", "utils/casper", "core_contracts/casper", "configuration/casper"]