[package]
name = "voting"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { workspace = true }
odra-modules = { workspace = true }
utils = { path = "../utils", default-features = false }
configuration = { path = "../configuration", default-features = false }

[features]
default = ["mock-vm"]
mock-vm = ["odra/mock-vm", "odra-modules/mock-vm", "utils/mock-vm", "configuration/mock-vm"]
casper = ["odra/casper", "odra-modules/casper", "utils/casper", "configuration/casper"]
